force-app/main/default/objects/OA_Engagement_Config__mdt/OA_Engagement_Config__mdt.object-meta.xml
<CustomObject>
    <description>Configuration for the Engagement Resolution Engine: campaign scope, matching toggles, assistant-mailbox prefixes, and free-provider domains. Not hardcoded in Apex so ERE stays campaign-agnostic.</description>
    <label>OA Engagement Config</label>
    <pluralLabel>OA Engagement Configs</pluralLabel>
</CustomObject>