force-app/main/default/objects/OA_Engagement_Config__mdt/fields/Assistant_Prefixes__c.field-meta.xml
<CustomField>
    <fullName>Assistant_Prefixes__c</fullName>
    <label>Assistant Prefixes</label>
    <length>255</length>
    <type>Text</type>
</CustomField>