force-app/main/default/objects/OA_Engagement_Config__mdt/fields/Campaign_Id__c.field-meta.xml
<CustomField>
    <fullName>Campaign_Id__c</fullName>
    <label>Campaign Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>