force-app/main/default/objects/OA_Engagement_Config__mdt/fields/Enable_L1__c.field-meta.xml
<CustomField>
    <fullName>Enable_L1__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Enable L1 (Lead Email)</label>
    <type>Checkbox</type>
</CustomField>