force-app/main/default/objects/OA_Engagement_Config__mdt/fields/Enable_L2__c.field-meta.xml
<CustomField>
    <fullName>Enable_L2__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Enable L2 (Contact Email)</label>
    <type>Checkbox</type>
</CustomField>