force-app/main/default/objects/OA_Engagement_Config__mdt/fields/Enable_L3__c.field-meta.xml
<CustomField>
    <fullName>Enable_L3__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Enable L3 (Corporate Domain)</label>
    <type>Checkbox</type>
</CustomField>