force-app/main/default/objects/OA_Engagement_Config__mdt/fields/Enable_L6_Review__c.field-meta.xml
<CustomField>
    <fullName>Enable_L6_Review__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Enable L6 (Human Review)</label>
    <type>Checkbox</type>
</CustomField>