force-app/main/default/objects/OA_Engagement_Config__mdt/fields/Free_Domains__c.field-meta.xml
<CustomField>
    <fullName>Free_Domains__c</fullName>
    <label>Free Domains</label>
    <length>255</length>
    <type>Text</type>
</CustomField>