force-app/main/default/objects/OA_Engagement_Config__mdt/fields/Observe_Only__c.field-meta.xml
<CustomField>
    <fullName>Observe_Only__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Observe Only</label>
    <type>Checkbox</type>
</CustomField>